Fix the color of the tabular vis. cells.
It may be very light with certain themes, making the content of the cells unreadable.

--- a/webview/styles/tabular.css
+++ b/webview/styles/tabular.css
@@ -2,9 +2,9 @@
  * Container of includegraphics visualisations
  * and top-level wrapper used by ag-Grid library
 */
-.visualisation[data-name="tabular"],
-.visualisation[data-name="tabular"] > .ag-root-wrapper {
+.visualisation[data-name="tabular"] {
     height: 150px;
+    color: #000000;
 }
 
 .align-left {
